[package]
name = "counting-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.1.0"
serde = { version = "1.0.0", features = ["derive"] }
cw-storage-plus = "0.14.0"
thiserror = "1.0.0"
schemars = "0.8"
cosmwasm-schema = "1.1"
cw-multi-test = { version = "0.14.0", optional = true }


[dev-dependencies]
cw-multi-test = "0.15.0"
